# Ary-Fund-AIs

./: .env.example  .gitignore  README.md  _chartcheck.py  _ctxmacro.py  _dbcount.py  _dbmatch.py  _dbscan.py  _embedtest.py  _envcheck.py  _filecheck.py  _genpath.py  _macrocheck.py  _ollbody.py  _ollcheck.py  _ollcheck2.py  _opcheck.py  _opmacro.py  _payload.py  _payload2.py  _probe.py  _probe2.py  _recompute_nvda.py  _scantrace.py  _sigcheck.py  _sigcheck2.py  _tags.py  _who.py  _whymacro.py  activate.bat  age_fundamentals.py  backfill.py  backfill_13f.py  backfill_filing_text.py  backfill_fundamentals.py  backfill_money_graph.py  backfill_news_edges.py  backfill_ownership_filers.py  backfill_universe.py  backfill_usaspending_edges.py  (+75 more)
.streamlit/: config.toml
MCP/: PPLX_1_MCP_list.md  PPLX_2_space_instructions.md  PPLX_3_prompt_library.md  PPLX_4_setup_guide.md  mcp_distress_risk.py  mcp_macro_risk.py  mcp_market_risk.py  openbb_widgets.py
agent/: __init__.py  base_agent.py  data_point_analyzer.py  filing_analyzer.py  metrics.py  metrics_alerts.py  risk_scanner.py  thesis_essay.py  thesis_generator.py  thesis_review.py
data/: __init__.py  data_registry.py  derived_signals.py  etf_holdings_loader.py  etf_providers.py  factor_returns_loader.py  filer_canonical.py  geo_supply.py  global_risk_pulse.py  hedgefund.db-shm  macro_data.py  market_data (1).py  market_data.py  metrics_db.py  money_graph.py  notifiers.py  openbb_provider.py  peer_stats.py  peer_stats_cache.json  pipeline (1).py  pipeline.py  portfolio.db-shm  portfolio.db-wal  portfolio_db.py  providers.py  refresh_scheduler.py  screener_data.py  sec_fetcher.py  sentiment_news.py  universe.py
quant/: __init__.py  avellaneda_stoikov.py  black_scholes.py  ergodicity.py  fft_analysis.py  gan_synthetic.py  gbm.py  girsanov.py  hrp.py  hurst.py  kelly.py  lempel_ziv.py  longstaff_schwartz.py  lyapunov.py  monte_carlo.py  mst.py  omori.py  ou_process.py  poisson.py  portfolio_construction.py  position_sizing.py  regime.py  regime_hmm.py  rmt.py  sabr.py  sandpile.py  sequential_monte_carlo.py  thesis_essay.py  var_es.py  volatility.py  wave_function_collapse.py  wavelet_regimes.py  yield_curve_3d.py
rag/: __init__.py  __main__.py  bm25_index.py  chunker.py  contextualizer.py  embedder.py  hybrid_retriever.py  indexer.py  integration_snippets.py  mmr.py  query_expander.py  reranker.py  retriever.py  vector_store.py  vector_store_chroma_backup.py
report/: __init__.py  __main__.py  content_builder.py
reports/: NVDA_memo_2026-06-28.html  NVDA_memo_2026-06-30.html  NVDA_memo_2026-07-01.html  NVIDIA_memo_2026-07-01.html
tests/: __init__.py  conftest.py  test_all.py  test_base_agent.py  test_data_point_analyzer.py  test_data_providers.py  test_data_registry.py  test_end_to_end_smoke.py  test_essay_metrics.py  test_etf_holdings_loader.py  test_filing_analyzer.py  test_global_risk_pulse.py  test_integration.py  test_main.py  test_market_data_ext.py  test_metrics.py  test_metrics_alerts.py  test_money_graph.py  test_pdf_report.py  test_peer_stats.py  test_pipeline_registry_context.py  (+8 more)
(+46 files in other folders)
