[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hedgefund-ai"
version = "0.1.0"
description = "Modular hedge-fund-style AI research assistant: SEC, market, macro, and LLM agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Hedge Fund AI" }]

dependencies = [
    # Data & numerics
    "pandas>=2.1",
    "numpy>=1.26,<2",  # <2 required: native libs unstable on numpy 2.x ABI
    "requests>=2.31",
    "yfinance>=0.2.40",
    "sqlalchemy>=2.0",
    "python-dotenv>=1.0",

    # Modeling (lightweight core; heavy stats in [quant] extra)
    "scikit-learn>=1.4",

    # UI
    "streamlit>=1.36",
    "plotly>=5.20",

    # PDF report generation
    "reportlab>=4.0",

    # RAG — pure-Python vector store (rag/vector_store.py), fallback
    # embedder + cross-encoder reranker, BM25. chromadb removed: native
    # layer segfaults on write here; the NumPy store replaces it.
    "sentence-transformers>=2.7",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pypdf>=4.0",
]
quant = [
    "statsmodels>=0.14",
    "arch>=6.3",
]

[tool.setuptools]
# Subpackages must be listed explicitly when using flat-layout. The
# rag.* entries are required or `pip install -e .` silently omits them
# and any `from rag.document_loaders import ...` fails at runtime.
packages = [
    "agent",
    "data",
    "quant",
    "ui",
    "report",
    "rag",
    "rag.document_loaders",
    "rag.learning",
    "rag.eval",
]

# NOTE: pytest configuration lives in pytest.ini, not here.
# When both files have a pytest section, pytest.ini wins and any block
# here is silently ignored - keeping it in one place avoids drift.